Closed Bug 602517 Opened 15 years ago Closed 15 years ago

missing null check of xmodmap in [@ nsWindow::OnKeyPressEvent]

Categories

(Core Graveyard :: Widget: Qt, defect)

All
Linux
defect
Not set
critical

Tracking

(Not tracked)

RESOLVED FIXED
mozilla2.0b8

People

(Reporter: timeless, Assigned: timeless)

Details

(Keywords: coverity, crash)

Crash Data

Attachments

(1 file)

1336 nsEventStatus 1337 nsWindow::OnKeyPressEvent(QKeyEvent *aEvent) 1338 { 1364 XModifierKeymap *xmodmap = XGetModifierMapping(display); 1371 for (int i = 0; i < 8 * xmodmap->max_keypermod; ++i) { 1592 if (xmodmap) { 1593 XFreeModifiermap(xmodmap);
Assignee: nobody → jeremias.bosch
can you verify and patch this?
Assignee: jeremias.bosch → mkristoffersen
Attached patch never compiledSplinter Review
i don't have a compiler handy here (on osx), but this should be correct
Assignee: mkristoffersen → timeless
Status: NEW → ASSIGNED
Attachment #496393 - Flags: review?(doug.turner)
Attachment #496393 - Flags: approval2.0?
Comment on attachment 496393 [details] [diff] [review] never compiled npodb
Attachment #496393 - Flags: review?(doug.turner)
Attachment #496393 - Flags: review+
Attachment #496393 - Flags: approval2.0?
Attachment #496393 - Flags: approval2.0+
Keywords: checkin-needed
Status: ASSIGNED → RESOLVED
Closed: 15 years ago
Keywords: checkin-needed
Resolution: --- → FIXED
Target Milestone: --- → mozilla2.0b8
Crash Signature: [@ nsWindow::OnKeyPressEvent]
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: