Bug 602517 - missing null check of xmodmap in [@ nsWindow::OnKeyPressEvent]. r+a=dougt